update syllabus for April

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 <p><a href="assts/asst09-1.html">Assignment 09 (Part 1)</a>: Due April 5th, by midnight.</p>
 </li>
 <li>
+<p><strong>Class Canceled: April 19th</strong></p>
+</li>
+<li>
 <p><strong>Final Exam</strong> will be a scheduled exam May 4th, 9:30am (3 hours, open book/laptop) in Park 245</p>
 </li>
 </ul>
@@ -417,12 +420,15 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">13</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">April 10,12 <a id="week13"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Threads III</strong></p>
+<p><strong>Memory</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 14</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 11.1-11.3</a></p>
+</li>
+<li>
+<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 11.5, Malloc Handout</a></p>
 </li>
 <li>
 <p><a href="assts/asst09-2.html">Assignment 09, Part II</a>: Due April 12</p>
@@ -435,17 +441,20 @@ on lecture content, worksheets, and assignments.</p>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">14</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">April 17,19 <a id="week14"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">April 17 <a id="week14"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Memory</strong></p>
+<p><strong>Memory, Compiling and linking, Code optimization</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 11.1-11.3</a></p>
+<p><strong>NO Class April 19th!</strong></p>
 </li>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 11.5, Malloc Handout</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 12</a></p>
+</li>
+<li>
+<p>Read: <a href="https://diveintosystems.org/singlepage/">Section 2.9.5</a></p>
 </li>
 <li>
 <p><a href="assts/asst10.html">Assignment 10</a>: Due April 26</p>
@@ -460,13 +469,10 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">15</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">April 24,26 <a id="week15"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Code Optimization, C++</strong></p>
+<p><strong>C++</strong></p>
 </div>
 <div class="ulist">
 <ul>
-<li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 12</a></p>
-</li>
 <li>
 <p>Lab: <strong>Jam 06 Study Guide</strong> <a href="studyguide6.html">Study Guide 6</a></p>
 </li>
@@ -755,7 +761,7 @@ website:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-04-01 10:55:26 -0400
+Last updated 2023-04-03 08:03:18 -0400
 </div>
 </div>
 </body>
