--- a/schedule.html
+++ b/schedule.html
@@ -710,12 +710,15 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">13</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">April 10,12 <a id="week13"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Threads III</strong></p>
+<p><strong>Memory</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 14</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 11.1-11.3</a></p>
+</li>
+<li>
+<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 11.5, Malloc Handout</a></p>
 </li>
 <li>
 <p><a href="assts/asst09-2.html">Assignment 09, Part II</a>: Due April 12</p>
@@ -728,17 +731,20 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">14</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">April 17,19 <a id="week14"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">April 17 <a id="week14"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Memory</strong></p>
+<p><strong>Memory, Compiling and linking, Code optimization</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 11.1-11.3</a></p>
+<p><strong>NO Class April 19th!</strong></p>
 </li>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 11.5, Malloc Handout</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 12</a></p>
+</li>
+<li>
+<p>Read: <a href="https://diveintosystems.org/singlepage/">Section 2.9.5</a></p>
 </li>
 <li>
 <p><a href="assts/asst10.html">Assignment 10</a>: Due April 26</p>
@@ -753,13 +759,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">15</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">April 24,26 <a id="week15"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Code Optimization, C++</strong></p>
+<p><strong>C++</strong></p>
 </div>
 <div class="ulist">
 <ul>
-<li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 12</a></p>
-</li>
 <li>
 <p>Lab: <strong>Jam 06 Study Guide</strong> <a href="studyguide6.html">Study Guide 6</a></p>
 </li>
@@ -774,7 +777,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-04-01 10:55:26 -0400
+Last updated 2023-04-03 08:22:55 -0400
 </div>
 </div>
 </body>
