--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Current Agenda: <a href="#week13">Week 13</a></p>
+<p>Current Agenda: <a href="#week14">Week 14</a></p>
 </li>
 <li>
-<p><a href="assts/asst09-2.html">Assignment 09 (Part 2)</a>: Due April 13th, by midnight.</p>
+<p><a href="assts/asst10.html">Assignment 10</a>: Due April 19th, by midnight.</p>
 </li>
 <li>
 <p><strong>Class Canceled: April 19th</strong></p>
@@ -431,6 +431,9 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 11.5, Malloc Handout</a></p>
 </li>
 <li>
+<p>Read: <a href="https://diveintosystems.org/singlepage/">Section 2.9.5</a></p>
+</li>
+<li>
 <p><a href="assts/asst09-2.html">Assignment 09, Part II</a>: Due April 12</p>
 </li>
 <li>
@@ -454,10 +457,10 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 12</a></p>
 </li>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Section 2.9.5</a></p>
+<p><a href="assts/asst10.html">Assignment 10</a>: Due April 19</p>
 </li>
 <li>
-<p><a href="assts/asst10.html">Assignment 10</a>: Due April 26</p>
+<p><strong>Jam 06 Study Guide</strong>: <a href="studyguide6.html">Study Guide 6</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -758,7 +761,7 @@ website:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-04-10 12:28:28 -0400
+Last updated 2023-04-17 12:39:35 -0400
 </div>
 </div>
 </body>
