--- a/schedule.html
+++ b/schedule.html
@@ -721,6 +721,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 11.5, Malloc Handout</a></p>
 </li>
 <li>
+<p>Read: <a href="https://diveintosystems.org/singlepage/">Section 2.9.5</a></p>
+</li>
+<li>
 <p><a href="assts/asst09-2.html">Assignment 09, Part II</a>: Due April 12</p>
 </li>
 <li>
@@ -744,10 +747,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 12</a></p>
 </li>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Section 2.9.5</a></p>
+<p><a href="assts/asst10.html">Assignment 10</a>: Due April 19</p>
 </li>
 <li>
-<p><a href="assts/asst10.html">Assignment 10</a>: Due April 26</p>
+<p><strong>Jam 06 Study Guide</strong>: <a href="studyguide6.html">Study Guide 6</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -774,7 +777,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-04-10 12:28:49 -0400
+Last updated 2023-04-17 12:38:53 -0400
 </div>
 </div>
 </body>
