hide compile/link questions

--- a/studyguide6.html
+++ b/studyguide6.html
@@ -284,31 +284,10 @@ for (int i = 0; i &lt; N; i++) {
 <div class="ulist">
 <ul>
 <li>
-<p>What is the difference between compiling and linking?</p>
-</li>
-<li>
-<p>What is a library? When would you use one?</p>
-</li>
-<li>
-<p>What are differences between an application and a library?</p>
-</li>
-<li>
-<p>What is the difference between static and dynamic libraries? Why might you want to use one over the other?</p>
-</li>
-<li>
-<p>What does the pre-processor do?</p>
-</li>
-<li>
-<p>What is the purpose of compiling and linking?</p>
-</li>
-<li>
 <p>Give examples of the types of code that the compiler can optimize</p>
 </li>
 <li>
-<p>Give an example of code that cannot be optimized by the compiler</p>
-</li>
-<li>
-<p>What is the difference between a header file (.h) and an implementation file (*.c)?</p>
+<p>Give an example of code that cannot be optimized by the compiler?</p>
 </li>
 </ul>
 </div>
@@ -337,17 +316,13 @@ for (int i = 0; i &lt; strlen(text); i++) {
 }</code></pre>
 </div>
 </div>
-<div class="paragraph">
-<p>//// Creates and initializes a pallet with the given number of random colors
-//// Frees the memory associated with the given pallette</p>
-</div>
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-04-10 12:28:12 -0400
+Last updated 2023-04-17 12:47:24 -0400
 </div>
 </div>
 </body>
