final study guide

--- a/index.html
+++ b/index.html
@@ -47,15 +47,6 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Current Agenda: <a href="#week14">Week 14</a></p>
-</li>
-<li>
-<p><a href="assts/asst10.html">Assignment 10</a>: Due April 19th, by midnight.</p>
-</li>
-<li>
-<p><strong>Class Canceled: April 19th</strong></p>
-</li>
-<li>
 <p><strong>Final Exam</strong> will be a scheduled exam May 4th, 9:30am (3 hours, open book/laptop) in Park 245</p>
 </li>
 </ul>
@@ -446,12 +437,12 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">14</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">April 17 <a id="week14"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Memory, Compiling and linking, Code optimization</strong></p>
+<p><strong>Memory, Code optimization</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p><strong>NO Class April 19th!</strong></p>
+<p><strong>No Class April 19th!</strong></p>
 </li>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 12</a></p>
@@ -761,7 +752,7 @@ website:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-04-17 12:39:35 -0400
+Last updated 2023-04-29 13:51:51 -0400
 </div>
 </div>
 </body>
