--- a/schedule.html
+++ b/schedule.html
@@ -736,12 +736,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">14</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">April 17 <a id="week14"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Memory, Compiling and linking, Code optimization</strong></p>
+<p><strong>Memory, Code optimization</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p><strong>NO Class April 19th!</strong></p>
+<p><strong>No Class April 19th!</strong></p>
 </li>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 12</a></p>
@@ -777,7 +777,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-04-17 12:38:53 -0400
+Last updated 2023-04-29 13:51:42 -0400
 </div>
 </div>
 </body>
