--- a/studyguide-final.html
+++ b/studyguide-final.html
@@ -48,6 +48,34 @@ to help you organize the material so you can access it quickly.</p>
 <div class="paragraph">
 <p>The exam will be a mix of written answers and coding.</p>
 </div>
+<div class="paragraph">
+<p>Topics:</p>
+</div>
+<div class="paragraph">
+<p>Everything!</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="studyguide1.html">Study Guide 1</a></p>
+</li>
+<li>
+<p><a href="studyguide2.html">Study Guide 2</a></p>
+</li>
+<li>
+<p><a href="studyguide3.html">Study Guide 3</a></p>
+</li>
+<li>
+<p><a href="studyguide4.html">Study Guide 4</a></p>
+</li>
+<li>
+<p><a href="studyguide5.html">Study Guide 5</a></p>
+</li>
+<li>
+<p><a href="studyguide6.html">Study Guide 6</a></p>
+</li>
+</ul>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -591,7 +619,7 @@ The longest word is cucumber.</code></pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-04-29 15:21:04 -0400
+Last updated 2023-04-29 15:25:07 -0400
 </div>
 </div>
 </body>
