add link to final study guide

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 <li>
 <p><strong>Final Exam</strong> will be a scheduled exam May 4th, 9:30am (3 hours, open book/laptop) in Park 245</p>
 </li>
+<li>
+<p>Check out the <a href="studyguide-final.html">Final Study Guide</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -752,7 +755,7 @@ website:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-04-29 13:51:51 -0400
+Last updated 2023-04-29 15:25:54 -0400
 </div>
 </div>
 </body>
