--- a/labPolicy.html
+++ b/labPolicy.html
@@ -449,12 +449,11 @@ component of the class.</p>
 <div class="paragraph">
 <p>Lab exercises will be passed out in lab. These exercises are intended to be short and
 will typically ask you to reproduce demos from class or tackle concepts you will need
-for your assignment. Lab execises should be handed in at the end of lab.</p>
+for your assignment. Lab exercises should be handed in at the end of lab.</p>
 </div>
 <div class="paragraph">
 <p>Class exercises will be passed out in class. These exercises are intended to be
-short and will typically ask you to practice concepts from lecture.  Class
-execises should be handed in at the end of class.</p>
+short and will typically ask you to practice concepts from lecture.</p>
 </div>
 <div class="paragraph">
 <p>Assignments will be posted Saturdays and due Friday before midnight.  You are
@@ -462,13 +461,13 @@ strongly encouraged to start early so that you can ask questions. See the
 syllabus for links to the assignments.</p>
 </div>
 <div class="paragraph">
-<p>You will submit your assignments electronically using <a href="www.dropbox.com">Dropbox</a>.</p>
+<p>You will submit your assignments electronically using git.</p>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-03-19 21:45:25 -0400
+Last updated 2024-08-27 15:57:11 -0400
 </div>
 </div>
 </body>
