--- a/latePolicy.html
+++ b/latePolicy.html
@@ -452,24 +452,26 @@ from class. Most of this work will be due in lecture or labs. The
 weekly time commitment for this course is aimed to be approximately 10 hours per week.</p>
 </div>
 <div class="paragraph">
-<p>Assignments will generally be due on Wednesdays. However, you may request up to <strong>one</strong> late
-days (until Thursday) if necessary. No submissions beyond Thursday will be accepted.
+<p>Assignments will generally be due on Fridays. However, you may request up to <strong>one</strong> late
+day (until Saturday) if necessary. No submissions beyond Saturday will be accepted.
 This allows us time to grade assignments. And it helps prevent you from falling
-behind.</p>
+behind. Note that with weekly assignments, you can miss a week or two without losing
+much points on a final grade.</p>
 </div>
 <div class="paragraph">
-<p>If you need to miss a code jam, let the instructor know and the missed credit for the code jam
+<p>If you need to miss a quiz, we will not have make-ups. Instead, the missed credit for the quiz
 will be added to the final exam.</p>
 </div>
 <div class="paragraph">
-<p>You may need to provide a doctor&#8217;s note if you need special accomodations due to a
-medical emergency.</p>
+<p>You may need to provide a doctor&#8217;s note if you need special accommodations due to a
+medical emergency. If you require an accommodation for exams and quizzes, this must be submitted
+to the instructor within the first two weeks or class.</p>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-03-19 21:45:25 -0400
+Last updated 2024-08-27 16:00:12 -0400
 </div>
 </div>
 </body>
