--- a/codingstandard.html
+++ b/codingstandard.html
@@ -11,7 +11,7 @@
 </head>
 <body class="article toc2 toc-left">
 <div id="header">
-<h1>CS223: Code Formatting Standards and Guidelines&#8201;&#8212;&#8201;Spring 2023</h1>
+<h1>CS223: Code Formatting Standards and Guidelines&#8201;&#8212;&#8201;Fall 2024</h1>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
@@ -498,7 +498,7 @@ struct TypeName
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-03-19 21:45:25 -0400
+Last updated 2024-08-27 16:01:44 -0400
 </div>
 </div>
 </body>
