--- a/covidpolicy.html
+++ b/covidpolicy.html
@@ -444,23 +444,21 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h2 id="_covid_policy">Covid Policy</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Lectures and labs will have a <em>mask-friendly</em> policy.
-All are welcome to wear a mask if they so wish, but no one
-is mandated to wear a mask.</p>
+<p>Lectures and labs will have a <em>mask-friendly</em> policy.  All are welcome to wear a
+mask if they so wish, but no one is mandated to wear a mask.</p>
 </div>
 <div class="paragraph">
-<p>If you are symptomatic
-(coughing, sore throat, or running nose),
-please either stay at home or come into campus with a mask. Lectures will be recorded
-so they can be watched later. Missed lab activities will have their grade credit
-transferred to the final.</p>
+<p>If you are symptomatic (coughing, sore throat, or running nose), please either
+stay at home or come into campus with a mask. Lectures will be recorded so they
+can be watched later. Missed lab activities and quizzes will have their grade
+credit transferred to the final.</p>
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-03-19 21:45:25 -0400
+Last updated 2024-08-27 16:02:14 -0400
 </div>
 </div>
 </body>
