--- a/schedule.html
+++ b/schedule.html
@@ -456,14 +456,14 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <tbody>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Jan 18 <a id="week01"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">September 3, 5 <a id="week01"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Introductions, Hello C</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Appendix 1</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_appendix_1_chapter_1_for_java_programmers">Appendix 1</a></p>
 </li>
 <li>
 <p><a href="http://linuxcommand.org/lc3_learning_the_shell.php">Learning the shell</a></p>
@@ -471,12 +471,18 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p>Topics: Programming at the command line, Makefiles, From Java to C</p>
 </li>
+<li>
+<p><a href="assts/asst01.html">Assignment 01</a>: Due Sept 6</p>
+</li>
+<li>
+<p>Lab: SSH and Github setup</p>
+</li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">2</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Jan 23,25 <a id="week02"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Sept 10, 12 <a id="week02"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>More C, Introduction to Pointers</strong></p>
 </div>
@@ -486,23 +492,23 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Topics: Function stacks, scope</p>
 </li>
 <li>
-<p><a href="assts/asst01.html">Assignment 01</a>: Due Jan 25</p>
-</li>
-<li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Sections 2.1-2.8, 2.9 (Command line arguments only)</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_a_deeper_dive_into_c_programming">Sections 2.1-2.8, 2.9 (Command line arguments only)</a></p>
 </li>
 <li>
 <p><a href="https://pythontutor.com/c.html#mode=edit">C Tutor</a></p>
 </li>
 <li>
-<p>Lab: SSH and Github setup</p>
+<p>Lab Sept 12: Quiz 01 practice, <a href="studyguide1.html">Study Guide: Quiz 01</a></p>
+</li>
+<li>
+<p><a href="assts/asst02.html">Assignment 02</a>: Sept 12</p>
 </li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">3</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Jan 30, Feb 1 <a id="week03"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Sept 17, 19 <a id="week03"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Pointers, malloc/free</strong></p>
 </div>
@@ -512,20 +518,20 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Topics: Heap, dynamically-allocated memory (malloc, free), More arrays</p>
 </li>
 <li>
-<p><a href="assts/asst02.html">Assignment 02</a>: Feb 1</p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_a_deeper_dive_into_c_programming">Sections 2.1-2.8, 2.9 (Command line arguments only)</a></p>
 </li>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Sections 2.1-2.8, 2.9 (Command line arguments only)</a></p>
+<p>Lab Sept 19: <strong>Quiz 01</strong></p>
 </li>
 <li>
-<p>Lab: Quiz 01 practice, <a href="studyguide1.html">Study Guide</a></p>
+<p><a href="assts/asst03.html">Assignment 03</a>: Due Feb 8</p>
 </li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">4</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Feb 6,8 <a id="week04"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Sept 24, 26 <a id="week04"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Pointer-based data structures. Debugging.</strong></p>
 </div>
@@ -535,88 +541,68 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Topics: Linked lists in C. GDB, Valgrind</p>
 </li>
 <li>
-<p><a href="assts/asst03.html">Assignment 03</a>: Due Feb 8</p>
-</li>
-<li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Sections 3.1-3.3</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_c_debugging_tools">Sections 3.1-3.3</a></p>
 </li>
 <li>
 <p>Read: <a href="http://svslibrary.pbworks.com/f/Data+Structures+and+Algorithm+Analysis+in+C+-+Mark+Allen+Weiss.pdf">Data Structures in C, Mark Allen Weiss, Chpt 3</a></p>
 </li>
 <li>
-<p>Lab: <strong>Code Jam 01</strong>, <a href="studyguide1.html">Study Guide</a></p>
+<p>Sept 26 Lab: Quiz 02 Practice, <a href="studyguide2.html">Study Guide: Quiz 02</a></p>
 </li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">5</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Feb 13,15 <a id="week05"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Oct 1,3 <a id="week05"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Binary and Data Representation I</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 4.1-4.3</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_binary_and_data_representation">Chapter 4.1-4.3</a></p>
 </li>
 <li>
-<p><a href="assts/asst04.html">Assignment 04</a>: Due Feb 15</p>
+<p><a href="assts/asst04.html">Assignment 04</a>:</p>
 </li>
 <li>
-<p>Lab: <strong>Jam Redux 01; Study Guide 02</strong></p>
+<p>Lab Oct 3:  <strong>Quiz 02</strong></p>
 </li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">6</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Feb 20,22 <a id="week06"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Oct 8, 10 <a id="week06"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Binary and Data Representation II</strong></p>
+<p><strong>Binary and Data Representation II, Intro to Assembly</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 4.4-4.9</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_binary_and_data_representation">Chapter 4.4-4.9</a></p>
 </li>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Section 5.1, Chapter 6</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_what_von_neumann_knew_computer_architecture">Section 5, 5.1</a></p>
 </li>
 <li>
-<p><a href="assts/asst05.html">Assignment 05</a>: Due Feb 22</p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/##_assembly_chapter">Chapter 6</a></p>
 </li>
 <li>
-<p>Lab: <strong>Code Jam 02</strong>, <a href="studyguide2.html">Study Guide 2</a></p>
+<p><a href="assts/asst05.html">Assignment 05</a>:</p>
+</li>
+<li>
+<p>Lab Oct 10: Practice Quiz 03, <a href="studyguide3.html">Study Guide 3</a></p>
 </li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">7</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Feb 27, March 1 <a id="week07"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Oct 16,19 <a id="week08"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Computer architecture, Assembly</strong></p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 7 (7.1-7.3,7.5,7.10), 10</a></p>
-</li>
-<li>
-<p><a href="assts/asst06.html">Assignment 06</a>: Due March 1</p>
-</li>
-<li>
-<p>Lab: <strong>Jam 02 Redux; Study Guide 03</strong> <a href="studyguide3.html">Study Guide 3</a></p>
-</li>
-</ul>
-</div></div></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">8</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">March 6,8 <a id="week08"></a></p></td>
-<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Spring Break</strong></p>
+<p><strong>Fall Break</strong></p>
 </div>
 <div class="ulist">
 <ul>
@@ -627,78 +613,104 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div></div></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">8</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Oct 22, 24 <a id="week07"></a></p></td>
+<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+<p><strong>Assembly</strong></p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_x64_assembly_chapter">Chapter 7 (7.1-7.3,7.5,7.10), 10</a></p>
+</li>
+<li>
+<p><a href="assts/asst06.html">Assignment 06</a>:</p>
+</li>
+<li>
+<p>Lab: Practice Quiz 04 <a href="studyguide4.html">Study Guide: Quiz 04</a></p>
+</li>
+</ul>
+</div></div></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">March 13,15 <a id="week09"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Oct 29,31 <a id="week09"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>The operating system, Processes</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="assts/asst07.html">Assignment 07</a>: Due March 15 <strong>Hardcopy due at Park 200B</strong></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_the_operating_system">Chapter 13, skip section 13.3</a></p>
 </li>
 <li>
-<p>Lab: <strong>Study Guide 03</strong> <a href="studyguide3.html">Study Guide 3</a></p>
+<p><a href="assts/asst07.html">Assignment 07</a>: Due TODO <strong>Hardcopy due at Park 200B</strong></p>
 </li>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 13, skip section 13.3</a></p>
+<p>Lab:</p>
 </li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">March 20, 22 <a id="week10"></a></p></td>
-<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Processes and Inter-process communication (IPC)</strong></p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 13.4-13.6</a></p>
-</li>
-<li>
-<p><a href="assts/asst08-1.html">Assignment 08,Part I</a>: Due March 22</p>
-</li>
-<li>
-<p>Lab: <strong>Quiz 03</strong></p>
-</li>
-</ul>
-</div></div></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">11</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">March 27,29 <a id="week11"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Nov 5, 7 <a id="week10"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Threads I</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 14</a></p>
+<p>Nov 5: NO CLASS. ELECTION Day</p>
 </li>
 <li>
-<p><a href="assts/asst08-2.html">Assignment 08,Part II</a>: Due March 29</p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_the_operating_system">Chapter 13.4-13.6</a></p>
 </li>
 <li>
-<p>Lab: <strong>Study Guide 04</strong>: <a href="studyguide4.html">Study Guide 4</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_some_advanced_c_features">Section 2.9.3, 2.9.4 (void* andpointer arithmetic)</a></p>
+</li>
+<li>
+<p><a href="assts/TODO.html">Assignment 08</a>: Due</p>
+</li>
+<li>
+<p>Lab:</p>
 </li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">April 3,5 <a id="week12"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">11</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Nov 12, 14 <a id="week11"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Threads II</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 14</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/asst09-1.html">Assignment 09, Part I</a>: Due April 5</p>
+<p><a href="assts/TODO.html">Assignment 09</a>: Due</p>
+</li>
+<li>
+<p>Lab: <a href="studyguide4.html">Study Guide 4</a></p>
+</li>
+</ul>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Nov 19,21 <a id="week12"></a></p></td>
+<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+<p><strong>Threads III</strong></p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
+</li>
+<li>
+<p><a href="assts/TODO.html">Assignment 10, Part I</a>: Due</p>
 </li>
 <li>
 <p>Lab: <strong>Quiz 04</strong></p>
@@ -708,33 +720,24 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">13</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">April 10,12 <a id="week13"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Nov 26 <a id="week13"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Memory</strong></p>
+<p><strong>Threads IV</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 11.1-11.3</a></p>
+<p>Nov 28: Thanksgiving, NO CLASS</p>
 </li>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 11.5, Malloc Handout</a></p>
-</li>
-<li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Section 2.9.5</a></p>
-</li>
-<li>
-<p><a href="assts/asst09-2.html">Assignment 09, Part II</a>: Due April 12</p>
-</li>
-<li>
-<p><strong>Jam 05 Study Guide</strong>: <a href="studyguide5.html">Study Guide 5</a></p>
+<p><a href="assts/TODO.html">Assignment 10, Part II</a>: Due</p>
 </li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">14</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">April 17 <a id="week14"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Dec 3,5 <a id="week14"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Memory, Code optimization</strong></p>
 </div>
@@ -744,20 +747,21 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><strong>No Class April 19th!</strong></p>
 </li>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/">Chapter 12</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_storage_and_the_memory_hierarchy">Chapter 11.1-11.3</a></p>
 </li>
 <li>
-<p><a href="assts/asst10.html">Assignment 10</a>: Due April 19</p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_code_optimization">Chapter 12</a></p>
 </li>
 <li>
-<p><strong>Jam 06 Study Guide</strong>: <a href="studyguide6.html">Study Guide 6</a></p>
+<p><a href="assts/asst10.html">Assignment 10</a>: Due April 19
+*</p>
 </li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">15</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">April 24,26 <a id="week15"></a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Dec 10,12 <a id="week15"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>C++</strong></p>
 </div>
@@ -777,7 +781,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-04-29 13:51:42 -0400
+Last updated 2024-08-27 19:07:20 -0400
 </div>
 </div>
 </body>
