--- a/assts/asst02.html
+++ b/assts/asst02.html
@@ -29,7 +29,7 @@
 <h2 id="_assignment_2_learn_to_c">Assignment 2: Learn to C</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p><strong>Due Wednesday, February 1st, before midnight</strong></p>
+<p><strong>Due Thursday, September 12, before midnight</strong></p>
 </div>
 <div class="paragraph">
 <p>The goals for this assignment are:</p>
@@ -432,7 +432,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-08-27 09:58:06 -0400
+Last updated 2024-08-28 10:01:19 -0400
 </div>
 </div>
 </body>
