--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
 <li>
 <p>Welcome to Fall 2024! For those of you who are about to rock, I salute you!</p>
 </li>
+<li>
+<p>First lecture will be on Tuesday, September 3rd, 11:40AM in room Park 159.</p>
+</li>
+<li>
+<p>First assignment is Due Sept 6th. <a href="assts/asst01.html">Assignment 01: Hello C!</a></p>
+</li>
+<li>
+<p>First lab will be on Thursday, September 5th, 2:40PM in Park 230. We will go over git and using Github</p>
+</li>
 </ul>
 </div>
 </div>
@@ -155,13 +164,13 @@ on lecture content, worksheets, and assignments.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/#_appendix_1_chapter_1_for_java_programmers">Appendix 1</a></p>
+<p>Topics: Programming at the command line, Makefiles, From Java to C</p>
+</li>
+<li>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_appendix_1_chapter_1_for_java_programmers">Chapter 1: From JAVA to C</a></p>
 </li>
 <li>
 <p><a href="http://linuxcommand.org/lc3_learning_the_shell.php">Learning the shell</a></p>
-</li>
-<li>
-<p>Topics: Programming at the command line, Makefiles, From Java to C</p>
 </li>
 <li>
 <p><a href="assts/asst01.html">Assignment 01</a>: Due Sept 6</p>
@@ -216,7 +225,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Lab Sept 19: <strong>Quiz 01</strong></p>
 </li>
 <li>
-<p><a href="assts/asst03.html">Assignment 03</a>: Due Feb 8</p>
+<p><a href="assts/asst03.html">Assignment 03</a>: Due September 19</p>
 </li>
 </ul>
 </div></div></td>
@@ -241,6 +250,9 @@ on lecture content, worksheets, and assignments.</p>
 <li>
 <p>Sept 26 Lab: Quiz 02 Practice, <a href="studyguide2.html">Study Guide: Quiz 02</a></p>
 </li>
+<li>
+<p><a href="assts/asst04.html">Assignment 04</a>: Due September 26</p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -256,7 +268,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_binary_and_data_representation">Chapter 4.1-4.3</a></p>
 </li>
 <li>
-<p><a href="assts/asst04.html">Assignment 04</a>:</p>
+<p><a href="assts/asst05.html">Assignment 05</a>: Due Oct 3</p>
 </li>
 <li>
 <p>Lab Oct 3:  <strong>Quiz 02</strong></p>
@@ -282,7 +294,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/##_assembly_chapter">Chapter 6</a></p>
 </li>
 <li>
-<p><a href="assts/asst05.html">Assignment 05</a>:</p>
+<p><a href="assts/asst06.html">Assignment 06</a>: Due Oct 10</p>
 </li>
 <li>
 <p>Lab Oct 10: Practice Quiz 03, <a href="studyguide3.html">Study Guide 3</a></p>
@@ -316,10 +328,10 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_x64_assembly_chapter">Chapter 7 (7.1-7.3,7.5,7.10), 10</a></p>
 </li>
 <li>
-<p><a href="assts/asst06.html">Assignment 06</a>:</p>
+<p><a href="assts/asst07.html">Assignment 07</a>: Due Oct 24</p>
 </li>
 <li>
-<p>Lab: Practice Quiz 04 <a href="studyguide4.html">Study Guide: Quiz 04</a></p>
+<p>Lab Oct 24: <strong>Quiz 03</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -336,10 +348,10 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_the_operating_system">Chapter 13, skip section 13.3</a></p>
 </li>
 <li>
-<p><a href="assts/asst07.html">Assignment 07</a>: Due TODO <strong>Hardcopy due at Park 200B</strong></p>
+<p><a href="assts/asst08.html">Assignment 08</a>: Due Oct 31 <strong>Hardcopy due at Park 200B</strong></p>
 </li>
 <li>
-<p>Lab:</p>
+<p>Lab: Practice Quiz 04 <a href="studyguide4.html">Study Guide: Quiz 04</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -362,10 +374,10 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_some_advanced_c_features">Section 2.9.3, 2.9.4 (void* andpointer arithmetic)</a></p>
 </li>
 <li>
-<p><a href="assts/TODO.html">Assignment 08</a>: Due</p>
+<p><a href="assts/TODO.html">Assignment 09</a>: Due Nov 7</p>
 </li>
 <li>
-<p>Lab:</p>
+<p>Lab:  <strong>Quiz 04</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -382,10 +394,10 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/TODO.html">Assignment 09</a>: Due</p>
+<p><a href="assts/TODO.html">Assignment 10</a>: Due Nov 14th</p>
 </li>
 <li>
-<p>Lab: <a href="studyguide4.html">Study Guide 4</a></p>
+<p>Lab: Quiz Practice, <a href="studyguide5.html">Study Guide 5</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -399,13 +411,16 @@ on lecture content, worksheets, and assignments.</p>
 <div class="ulist">
 <ul>
 <li>
+<p>Nov 21, NO CLASS</p>
+</li>
+<li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/TODO.html">Assignment 10, Part I</a>: Due</p>
+<p><a href="assts/TODO.html">Assignment 11</a>: Due Nov 21</p>
 </li>
 <li>
-<p>Lab: <strong>Quiz 04</strong></p>
+<p>Lab: <strong>Quiz 05</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -421,9 +436,6 @@ on lecture content, worksheets, and assignments.</p>
 <li>
 <p>Nov 28: Thanksgiving, NO CLASS</p>
 </li>
-<li>
-<p><a href="assts/TODO.html">Assignment 10, Part II</a>: Due</p>
-</li>
 </ul>
 </div></div></td>
 </tr>
@@ -436,17 +448,16 @@ on lecture content, worksheets, and assignments.</p>
 <div class="ulist">
 <ul>
 <li>
-<p><strong>No Class April 19th!</strong></p>
-</li>
-<li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_storage_and_the_memory_hierarchy">Chapter 11.1-11.3</a></p>
 </li>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_code_optimization">Chapter 12</a></p>
 </li>
 <li>
-<p><a href="assts/asst10.html">Assignment 10</a>: Due April 19
-*</p>
+<p><a href="assts/asst12.html">Assignment 12</a>: Due Dec 5</p>
+</li>
+<li>
+<p>Lab Dec 5, Final Practice, <a href="studyguide-final.html">Final Study Guide</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -460,10 +471,7 @@ on lecture content, worksheets, and assignments.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Lab: <strong>Quiz05</strong>, April 24th (<a href="studyguide5.html">Study Guide 5</a>, <a href="studyguide6.html">Study Guide 6</a>)</p>
-</li>
-<li>
-<p><a href="studyguide-final.html">Final Study Guide</a></p>
+<p>Lab Dec 5, Final Practice, <a href="studyguide-final.html">Final Study Guide</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -506,6 +514,9 @@ on lecture content, worksheets, and assignments.</p>
 </li>
 <li>
 <p><a href="https://www.gnu.org/software/make/manual/html_node/Introduction.html">Makefiles</a></p>
+</li>
+<li>
+<p><a href="http://linuxcommand.org/lc3_learning_the_shell.php">Learning the shell</a></p>
 </li>
 </ul>
 </div>
@@ -885,7 +896,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-08-27 19:19:58 -0400
+Last updated 2024-08-28 09:59:23 -0400
 </div>
 </div>
 </body>
