--- a/integrity.html
+++ b/integrity.html
@@ -444,8 +444,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h2 id="_academic_integrity">Academic Integrity</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>At Bryn Mawr, we assume students are trustworthy and work with honesty and
-integrity. <a href="https://www.brynmawr.edu/deans/academic-and-community-integrity">Look here for information about Bryn Mawr&#8217;s Honor Code.</a></p>
+<p>Copied and unattributed work will receive zero credit. At Bryn Mawr, we assume students are
+trustworthy and work with honesty and integrity.
+<a href="https://www.brynmawr.edu/deans/academic-and-community-integrity">Look here
+for information about Bryn Mawr&#8217;s Honor Code.</a></p>
 </div>
 <div class="paragraph">
 <p>As you progress in this course, you will see that programming is a creative
@@ -457,8 +459,8 @@ algorithms and implementing them through programs.</p>
 <p>Quizzes and exams will be <em>closed book</em>. You will be able to bring a
 single cheat sheet with you. <strong>The goal of assignments and labs is to help you
 prepare for quizzes and exams!</strong> If you can sit down, focus, and answer sample
-questions within a time limit, you will be ready ace the exams for this class.
-Incidentally, you will also be ready to ace a job interview on this topic.</p>
+questions within a time limit, you will ace the exams for this class.
+Incidentally, you will also be prepared to ace a job interview on this topic!</p>
 </div>
 <div class="paragraph">
 <p>Integrity Guidelines:</p>
@@ -513,7 +515,7 @@ at other solutions after you have finished your own first!</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-08-27 15:56:17 -0400
+Last updated 2024-08-28 14:23:34 -0400
 </div>
 </div>
 </body>
