--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="article toc2 toc-left">
 <div id="header">
-<h1>CMSC 223: Systems Programming&#8201;&#8212;&#8201;Fall 2023</h1>
+<h1>CMSC 223: Systems Programming&#8201;&#8212;&#8201;Fall 2024</h1>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
@@ -122,12 +122,12 @@ will be introduced at the end of the course.</p>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours - Paprika Chen</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Park 231</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">TBA</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Tuesdays, 7-9 PM</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours - Celia Chen</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours - Yue Chen</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Park 231</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">TBA</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Thursdays, 7-9 PM</p></td>
 </tr>
 </tbody>
 </table>
@@ -898,7 +898,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-08-28 09:59:23 -0400
+Last updated 2024-08-28 15:34:10 -0400
 </div>
 </div>
 </body>
