--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ will be introduced at the end of the course.</p>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours - Prof. Aline Normoyle</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">200B</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Friday, 9:30-11:00 AM</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">TBD</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours - Paprika Chen</p></td>
@@ -898,7 +898,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-08-28 15:34:10 -0400
+Last updated 2024-08-29 10:17:11 -0400
 </div>
 </div>
 </body>
