--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="article toc2 toc-left">
 <div id="header">
-<h1>CMSC 223: Systems Programming&#8201;&#8212;&#8201;Fall 2024</h1>
+<h1>CMSC 223: Systems Programming</h1>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
@@ -50,6 +50,9 @@
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
+<p>Term: Fall 2024</p>
+</div>
+<div class="paragraph">
 <p>Instructor: <a href="https://www.cs.brynmawr.edu/~alinen">Aline Normoyle</a></p>
 </div>
 <div class="ulist anns">
@@ -75,6 +78,11 @@
 <div class="sectionbody">
 <div class="paragraph">
 <p><strong>Welcome to CS223: Systems Programming</strong>!</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="img/matrix_original.jpg" alt="matrix original">
+</div>
 </div>
 <div class="paragraph">
 <p>Systems programming is the foundation of all software and toolkits that serve as
@@ -898,7 +906,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-08-29 10:17:11 -0400
+Last updated 2024-08-29 14:58:05 -0400
 </div>
 </div>
 </body>
