--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ will be introduced at the end of the course.</p>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours - Prof. Aline Normoyle</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">200B</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Park 200B</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Fridays, 3-5 PM (see slack for exceptions)</p></td>
 </tr>
 <tr>
@@ -906,7 +906,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-08-29 15:36:31 -0400
+Last updated 2024-08-29 15:40:59 -0400
 </div>
 </div>
 </body>
