--- a/index.html
+++ b/index.html
@@ -58,16 +58,7 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Welcome to Fall 2024! For those of you who are about to rock, I salute you!</p>
-</li>
-<li>
-<p>First lecture will be on Tuesday, September 3rd, 11:40AM in room Park 159.</p>
-</li>
-<li>
-<p>First assignment is Due Sept 6th. <a href="assts/asst01.html">Assignment 01: Hello C!</a></p>
-</li>
-<li>
-<p>First lab will be on Thursday, September 5th, 2:40PM in Park 230. We will go over git and using Github</p>
+<p>Next assignment is Due Sept 13th. <a href="assts/asst02.html">Assignment 01: Learn to C</a></p>
 </li>
 </ul>
 </div>
@@ -906,7 +897,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-08-29 15:40:59 -0400
+Last updated 2024-09-08 16:10:26 -0400
 </div>
 </div>
 </body>
