--- a/index.html
+++ b/index.html
@@ -116,17 +116,17 @@ will be introduced at the end of the course.</p>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours - Prof. Aline Normoyle</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Park 200B</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Fridays, 3-5 PM (see slack for exceptions)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Fridays, 2-3 PM (But often will be available until 5 PM)</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours - Paprika Chen</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Park 231</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Tuesdays, 7-9 PM</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Tuesdays, 7-8 PM</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours - Yue Chen</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Park 231</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Thursdays, 7-9 PM</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Thursdays, 7-8 PM</p></td>
 </tr>
 </tbody>
 </table>
@@ -897,7 +897,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-09-09 12:23:06 -0400
+Last updated 2024-09-09 15:17:15 -0400
 </div>
 </div>
 </body>
