--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
 <li>
 <p>Next assignment is Due Sept 13th. <a href="assts/asst02.html">Assignment 02: Learn to C</a></p>
 </li>
+<li>
+<p>Lab Activity: <a href="studyguide01.html">Study Guide for Quiz 1</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -897,7 +900,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-09-09 15:17:15 -0400
+Last updated 2024-09-12 10:17:15 -0400
 </div>
 </div>
 </body>
