--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Next assignment is Due Sept 13th. <a href="assts/asst02.html">Assignment 02: Learn to C</a></p>
+<p>Next assignment is Due Sept 20th. <a href="assts/asst03.html">Assignment 03: If you malloc something, set it free</a></p>
 </li>
 <li>
-<p>Lab Activity: <a href="studyguide1.html">Study Guide for Quiz 1</a></p>
+<p>Lab Quiz 1: <a href="studyguide1.html">Study Guide for Quiz 1</a></p>
 </li>
 </ul>
 </div>
@@ -900,7 +900,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-09-12 10:18:01 -0400
+Last updated 2024-09-17 11:08:53 -0400
 </div>
 </div>
 </body>
