--- a/assts/asst03.html
+++ b/assts/asst03.html
@@ -27,6 +27,9 @@
 <h2 id="_assignment_3_if_you_malloc_something_set_it_free">Assignment 3: If you malloc something, set it free</h2>
 <div class="sectionbody">
 <div class="paragraph">
+<p><strong>Due Friday, September 20th, before midnight</strong></p>
+</div>
+<div class="paragraph">
 <p>The goals for this assignment are:</p>
 </div>
 <div class="ulist">
@@ -376,7 +379,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-08-28 10:24:01 -0400
+Last updated 2024-09-17 11:08:47 -0400
 </div>
 </div>
 </body>
