--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Next assignment is Due Sept 20th. <a href="assts/asst03.html">Assignment 03: If you malloc something, set it free</a></p>
+<p>Next assignment is Due Sept 27th. <a href="assts/asst04.html">Assignment 04: Watch where you point</a></p>
 </li>
 <li>
-<p>Lab Quiz 1: <a href="studyguide1.html">Study Guide for Quiz 1</a></p>
+<p>Lab Study: <a href="studyguide2.html">Study Guide for Quiz 2</a></p>
+</li>
+<li>
+<p>Our final exam will be <strong>self-scheduled</strong> during the period Dec 15-20, 2024.</p>
 </li>
 </ul>
 </div>
@@ -900,7 +903,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-09-17 11:08:53 -0400
+Last updated 2024-09-23 10:06:49 -0400
 </div>
 </div>
 </body>
