--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Next assignment is Due Sept 27th. <a href="assts/asst04.html">Assignment 04: Watch where you point</a></p>
+<p>Next assignment is Due Oct 4th. <a href="assts/asst05.html">Assignment 05: Give a little bit</a></p>
 </li>
 <li>
-<p>Lab Study: <a href="studyguide2.html">Study Guide for Quiz 2</a></p>
+<p>QUIZ 3 in Lab Oct 3: <a href="studyguide2.html">Study Guide for Quiz 2</a></p>
 </li>
 <li>
 <p>Our final exam will be <strong>self-scheduled</strong> during the period Dec 15-20, 2024.</p>
@@ -903,7 +903,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-09-23 10:06:49 -0400
+Last updated 2024-10-01 10:57:53 -0400
 </div>
 </div>
 </body>
