--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Next assignment is Due Oct 4th. <a href="assts/asst05.html">Assignment 05: Give a little bit</a></p>
+<p>Next assignment is Due Oct 11th. <a href="assts/asst06.html">Assignment 06: Secret Messages</a></p>
 </li>
 <li>
-<p>QUIZ 2 in Lab Oct 3: <a href="studyguide2.html">Study Guide for Quiz 2</a></p>
+<p>Lab Oct 10: <a href="studyguide3.html">Study Guide for Quiz 3</a></p>
 </li>
 <li>
 <p>Our final exam will be <strong>self-scheduled</strong> during the period Dec 15-20, 2024.</p>
@@ -270,7 +270,7 @@ on lecture content, worksheets, and assignments.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/#_binary_and_data_representation">Chapter 4.1-4.3</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_binary_and_data_representation">Chapter 4.1-4.9</a></p>
 </li>
 <li>
 <p><a href="assts/asst05.html">Assignment 05</a>: Due Oct 3</p>
@@ -289,9 +289,6 @@ on lecture content, worksheets, and assignments.</p>
 </div>
 <div class="ulist">
 <ul>
-<li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/#_binary_and_data_representation">Chapter 4.4-4.9</a></p>
-</li>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_what_von_neumann_knew_computer_architecture">Section 5, 5.1</a></p>
 </li>
@@ -903,7 +900,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-02 13:16:02 -0400
+Last updated 2024-10-06 15:58:24 -0400
 </div>
 </div>
 </body>
